added i18n and auth provider

--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -156,6 +156,9 @@
   "booking-transport": {
     "booking-transport":"Бронь транспорта"
   },
+  "admin": {
+    "admin":"Администрирование"
+  },
 
   "users": {
     "users": "Пользователи",
